# ZoomingOnline

./: .copilot.md  .env.template  .gitignore  LICENSE  README.md  cors_server.py  data_to_s3_importer.py  generate_test_hdf5.py  package-lock.json  package.json  parse_hdf5_to_zarr.py  playwright.config.js  pyproject.toml  requirements.txt  run_browser_tests.sh  run_importer.slurm
.github/workflows/: app-tests.yml  deploy.yml  markdown-check.yml  pr-checks.yml  python-tests.yml
app/: .eslintignore  .prettierignore  README.md  debug-test.js  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  playwright.config.js  run_browser_tests.sh  setup-dev.sh  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.js
app/public/: 404.html
app/src/: App.svelte  app.css  app.html  router.ts  svelte-icons.d.ts
app/src/components/: ChartErrorBoundary.svelte  ChartZoomControls.svelte  ChartZoomControls_backup.svelte  Charts.svelte  Controls.svelte  CopyLink.svelte  (+11 more)
app/tests/: app-flow.spec.js  browser.spec.js  conftest.py  selection.spec.js  test_convert_hdf5_to_zarr.py  test_data_tos3_importer.py  test_generate_data.py
ci_scripts/: check.sh  check_md_commands.py  fix.sh
docs/: browser-tests.md  desktop-deployment.md  linting.md  scripts.md  setup.md  testing.md
examples/: run_importer.slurm
hdf5_to_zarr_converter/: main.py
python/: README.md  check.sh  pyproject.toml
python/example.zarr/overview/0/: 0.0.0.0.0  0.1.0.0.0  1.0.1.0.0  1.1.1.0.0
python/example.zarr/raw/: 0.1.0.0  1.1.0.0
python/src/: convert_hdf5_to_zarr.py  cors.xml  run_conversion.slurm
python/tests/: conftest.py  test_convert_hdf5_to_zarr.py  test_data_tos3_importer.py  test_generate_data.py
src/: convert_hdf5_to_zarr.py  cors_server.py  data_to_s3_importer.py  generate_data.py  run_conversion.slurm
tests/: browser.spec.js  browser_tests.js  test_convert_hdf5_to_zarr.py  test_data_tos3_importer.py  test_generate_data.py  test_s3_connectivity.sh
website/: index.html  script.js  style.css
website/js/: chartRenderer.js  dataLoader.js  main.js  timeUtils.js  uiManager.js
(+77 files in other folders)
