[project]
name = "zooming"
version = "0.1.0"
description = "Zooming online"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse==1.4.0",
    "boto3==1.38.46",
    "dotenv==0.9.9",
    "h5py==3.14.0",
    "s3fs==0.4.2",
    "zarr>=2,<3",
]

[[package]]
name = "zooming"
version = "0.1.0"
source = { virtual = "." }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "T201", "D100", "D101", "D102", "D103", "D104"]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S101"]


[tool.ruff.lint.pydocstyle]
convention = "google"


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]
