[project]
name = "zooming"
version = "0.1.0"
description = "Zooming online"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "s3fs>=2024.3.0,<2025.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "h5py>=3.14.0,<4.0.0",
    "zarr>=2,<3",
]

[[package]]
name = "zooming"
version = "0.1.0"
source = { virtual = "." }

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "T201", "D100", "D101", "D102", "D103", "D104"]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S101"]


[tool.ruff.lint.pydocstyle]
convention = "google"


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]